# cmake

example1/: CMakeLists.txt  README
example1/add/: CMakeLists.txt  add.cpp
example1/div/: CMakeLists.txt  div.cpp
example1/mult/: CMakeLists.txt  mult.cpp
example1/sub/: CMakeLists.txt  sub.cpp
example2/: CMakeLists.txt  README
example2/inc/: add.h
example2/src/: add.cpp
example3/: CMakeLists.txt  README
example3/app/: CMakeLists.txt
example3/lib/: CMakeLists.txt
example3/lib/src/: sub.cpp
makeex/: Makefile  README
makeex/inc/: sub.h
makeex/src/: add.cpp  main.cpp  sub.cpp
